samples/_failures_safe/1761167510_bea1b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_32ef0093.c: In function ‘main’:
./samples/SAFE/__tmp_32ef0093.c:173:16: error: expected identifier at end of input
  173 |                i, token_type_name(tokens[i].
      |                ^
./samples/SAFE/__tmp_32ef0093.c:173:16: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_32ef0093.c:173:16: error: expected declaration or statement at end of input
